<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.formats.UnifiedNativeAdView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cloud_computing_2001090_1920"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3">
                <TextView
                    android:text="@string/app_name"
                    android:textSize="@dimen/head_title_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:alpha="1"
                    android:textStyle="bold"/>
                <TextView
                    android:text=""
                    android:textSize="@dimen/head_title_size"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:alpha="1"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtTimezone"
                    android:text="@string/timezone"
                    android:textSize="@dimen/head_title_size"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:alpha="1"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/corner_margin"
                android:background="@drawable/rounded_corner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:alpha="1"
                android:layout_weight="1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <RadioGroup
                        android:checkedButton="@id/rdoHttps"
                        android:id="@+id/rdoGrp1"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioButton
                            android:text="Https://"
                            android:buttonTint="@color/black"
                            android:textSize="@dimen/radio_font_size"
                            android:layout_marginLeft="@dimen/button_margin"
                            android:textColor="@color/black"
                            android:id="@+id/rdoHttps"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></RadioButton>
                        <RadioButton
                            android:text="Http://"
                            android:buttonTint="@color/black"
                            android:layout_marginLeft="@dimen/button_margin"
                            android:textSize="@dimen/radio_font_size"
                            android:id="@+id/rdoHttp"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></RadioButton>
                        <RadioButton
                            android:text="Else"
                            android:buttonTint="@color/black"
                            android:layout_marginLeft="@dimen/button_margin"
                            android:textSize="@dimen/radio_font_size"
                            android:id="@+id/rdoElse"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></RadioButton>
                    </RadioGroup>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/username_text_input_layout"
                            android:layout_width="match_parent"
                            android:textColor="@color/black"
                            android:layout_weight="4"
                            android:background="@color/textBack"
                            android:textColorHint="@color/black"
                            android:layout_height="wrap_content">
                            <EditText
                                android:paddingLeft="10dp"
                                android:id="@+id/editText"
                                android:gravity="left"
                                android:textColor="@color/black"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:singleLine="true"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:ems="10"
                                android:hint="Input URL here..." />
                        </com.google.android.material.textfield.TextInputLayout>
                        <CheckBox
                            android:id="@+id/chkFavorite"
                            android:layout_weight="18"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:buttonTint="@color/black"
                            android:foregroundGravity="center"
                            android:layout_width="match_parent"
                            android:text="SAVE"
                            android:layout_height="match_parent"></CheckBox>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">
                    <TextView
                        android:id="@+id/test1"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:scrollbars="vertical"
                        android:layout_weight="6"
                        android:text="Time here ->"/>
                    <TextView
                        android:id="@+id/txtDisplay"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:scrollbars="vertical"
                        android:layout_weight="2"
                        android:text=""/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btnReq"
                        android:background="@drawable/rounded_corner_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="1"
                        android:text="request" />

                    <Button
                        android:id="@+id/btnFavorite"
                        android:background="@drawable/rounded_corner_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="1"
                        android:text="favorite" />

                    <Button
                        android:id="@+id/btnDonate"
                        android:background="@drawable/rounded_corner_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="1"
                        android:text="Donate" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <LinearLayout
                android:layout_margin="@dimen/corner_margin"
                android:orientation="vertical"
                android:background="@drawable/rounded_corner"
                android:layout_width="match_parent"
                android:alpha="0.8"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/method"
                    android:textSize="@dimen/head_title_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginLeft="@dimen/textview_margin"
                    android:layout_marginRight="@dimen/textview_margin"
                    android:text="@string/method_text1"
                    android:textSize="@dimen/head_content_size"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_marginLeft="@dimen/textview_margin"
                    android:layout_marginRight="@dimen/textview_margin"
                    android:text="@string/method_text2"
                    android:textSize="@dimen/head_content_size"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_marginLeft="@dimen/textview_margin"
                    android:layout_marginRight="@dimen/textview_margin"
                    android:text="@string/method_text3"
                    android:textSize="@dimen/head_content_size"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <LinearLayout
                android:layout_margin="@dimen/corner_margin"
                android:background="@drawable/rounded_corner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="1"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/fl_adplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

                <CheckBox
                    android:id="@+id/cb_start_muted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@color/black"
                    android:text="Start video ads muted" />

                <Button
                    android:id="@+id/btn_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Refresh Ad" />

                <TextView
                    android:text="Video status: "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/tv_video_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.gms.ads.formats.UnifiedNativeAdView>